cmake_minimum_required(VERSION 3.17)
project(zd18_thss)

set(CMAKE_CXX_STANDARD 14)

#add_executable(zd18_thss main.cpp 20200923_特定深度节点链表/lisfOfDepth.cpp)
#add_executable(zd18_thss 20200923_特定深度节点链表/lisfOfDepth.cpp)
#add_executable(zd18_thss 20200924_N-aryTreePreorderTraversal/preoder.cpp)
add_executable(zd18_thss 20201006_从上到下打印二叉树2/levelOrder.cpp)
