cmake_minimum_required(VERSION 3.17)
project(zd18_thss)

set(CMAKE_CXX_STANDARD 14)

#add_executable(zd18_thss main.cpp 20200923_特定深度节点链表/lisfOfDepth.cpp)
#add_executable(zd18_thss 20200923_特定深度节点链表/lisfOfDepth.cpp)
#add_executable(zd18_thss 20200924_N-aryTreePreorderTraversal/preoder.cpp)
#add_executable(zd18_thss 20201006_从上到下打印二叉树2/levelOrder.cpp)
#add_executable(zd18_thss 20201007_最大二叉树2/insertInttoMaxTree.cpp)
#add_executable(zd18_thss 20201008_递增顺序查找树/increasingBST.cpp)
#add_executable(zd18_thss 20201008_二叉搜索树的第k大节点/kthLargest.cpp)
#add_executable(zd18_thss 20201009_好叶子节点对的数量/countPairs.cpp)
#add_executable(zd18_thss 20201014_完全二叉树的节点个数/countNodes.cpp)
#add_executable(zd18_thss 20201014_二叉树剪枝/pruneTree.cpp)
#add_executable(zd18_thss 20201014_路径总和/hasPathSum.cpp )
add_executable(zd18_thss 20201015_合法二叉搜索树/isValidBST.cpp)